# Parcial-Final-HPC-1

Archivos Python/: costo.txt  theta.txt
VFLinealRegression/: CMakeLists.txt  main.cpp  regresionlineal.cpp  regresionlineal.h
VFLinealRegression/DataSets/: poverty.csv
VFLinealRegression/Debug/: CMakeCache.txt  Makefile  VFLinealRegression.cbp  cmake_install.cmake  y_train_hatCpp.txt
VFLinealRegression/Extraccion/: extraer.cpp  extraer.h
